[gd_scene load_steps=4 format=3 uid="uid://c165arqp73p1k"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/snapping/snapping_system_grid_properties_editor.gd" id="1_jva1e"]
[ext_resource type="PackedScene" uid="uid://diibmlqy1mpqb" path="res://addons/cyclops_level_builder/controls/numeric_line_edit.tscn" id="2_3bhn6"]
[ext_resource type="PackedScene" uid="uid://cphtpklx81l3w" path="res://addons/cyclops_level_builder/controls/vector3_edit.tscn" id="2_beo4d"]

[node name="snapping_system_grid_properties" type="PanelContainer"]
offset_right = 400.0
offset_bottom = 337.0
script = ExtResource("1_jva1e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Power of 2 Scale"

[node name="spin_power_of_two" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -16.0
max_value = 16.0
rounded = true
allow_greater = true
allow_lesser = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Unit size:"

[node name="ed_unit_size" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("2_3bhn6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="bn_presets" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Presets"

[node name="check_use_subdiv" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Subdivisions"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Subdivisions"

[node name="spin_subdiv" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 10.0
rounded = true
allow_greater = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Transform:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="bn_presets_transform" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Transform Presets"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Translate"

[node name="xform_translate" parent="VBoxContainer/VBoxContainer2/GridContainer" instance=ExtResource("2_beo4d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Rotate"

[node name="xform_rotate" parent="VBoxContainer/VBoxContainer2/GridContainer" instance=ExtResource("2_beo4d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Scale"

[node name="xform_scale" parent="VBoxContainer/VBoxContainer2/GridContainer" instance=ExtResource("2_beo4d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "Shear"

[node name="xform_shear" parent="VBoxContainer/VBoxContainer2/GridContainer" instance=ExtResource("2_beo4d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="popup_presets" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 3
item_0/text = "Meters"
item_0/id = 0
item_1/text = "Yards"
item_1/id = 1
item_2/text = "Feet"
item_2/id = 2

[node name="popup_transform_presets" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 2
item_0/text = "Cube Grid"
item_0/id = 0
item_1/text = "Equilateral Triangles XZ"
item_1/id = 1

[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/spin_power_of_two" to="." method="_on_spin_power_of_two_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/ed_unit_size" to="." method="_on_ed_unit_size_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/bn_presets" to="." method="_on_bn_presets_pressed"]
[connection signal="toggled" from="VBoxContainer/check_use_subdiv" to="." method="_on_check_use_subdiv_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/spin_subdiv" to="." method="_on_spin_subdiv_value_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer/bn_presets_transform" to="." method="_on_bn_presets_transform_pressed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/GridContainer/xform_translate" to="." method="_on_xform_translate_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/GridContainer/xform_rotate" to="." method="_on_xform_rotate_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/GridContainer/xform_scale" to="." method="_on_xform_scale_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/GridContainer/xform_shear" to="." method="_on_xform_shear_value_changed"]
[connection signal="index_pressed" from="popup_presets" to="." method="_on_popup_presets_index_pressed"]
[connection signal="index_pressed" from="popup_transform_presets" to="." method="_on_popup_transform_presets_index_pressed"]
